--- a/000. Project Starter Boilerplate/index.html
+++ b/000. Project Starter Boilerplate/index.html
@@ -8,7 +8,7 @@
 	<title>Project Title</title>
 </head>
 <body>
-	<h1>Project Starter</h1>
+	<h1>Project Starter Boilerplate</h1>
 
 	<script src="script.js"></script>
 </body>
